--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <img class="image-brand" src="./assets/logo.jpg" alt="logo" />
+          <img class="image-brand" src="./assets/logo.jpg" alt="logo" loading="lazy"/>
           treaty
           <button
             class="navbar-toggler"
@@ -74,7 +74,7 @@
             you serve.
             <br />
           </div>
-          <img class="upper-image" src="./assets/Hospic_main.png" alt="Hospic_main" />
+          <img class="upper-image" src="./assets/Hospic_main.png" alt="Hospic_main" loading="lazy"/>
         </div>
       </div>
     </section>
@@ -88,7 +88,7 @@
               <div class="row">
                 <div class="feature-box col">
                   <div class="photo">
-                    <img class="five-images" src="./assets/chat.png" alt="chat" />
+                    <img class="five-images" src="./assets/chat.png" alt="chat" loading="lazy"/>
                   </div>
                   <h4 class="fo">Messaging</h4>
                   <p class="font-small mb-0">
@@ -104,6 +104,7 @@
                       class="five-images"
                       src="./assets/medication.png"
                       alt="Medication"
+                      loading="lazy"
                     />
                   </div>
                   <h4 class="fo">Medication</h4>
@@ -121,6 +122,7 @@
                       class="five-images"
                       src="./assets/Schedule.png"
                       alt="Schedule"
+                      loading="lazy"
                     />
                   </div>
                   <h4 class="fo">Schedule</h4>
@@ -138,6 +140,7 @@
                       class="five-images"
                       src="./assets/Compliance.png"
                       alt="Compliance"
+                      loading="lazy"
                     />
                   </div>
                   <h4 class="fo">Compliance</h4>
@@ -155,6 +158,7 @@
                       class="five-images"
                       src="./assets/Track-Visit.png"
                       alt="Compliance"
+                      loading="lazy"
                     />
                   </div>
                   <h4 class="fo">Tract Visit</h4>
@@ -175,14 +179,14 @@
               <div class="pef">
                 <div class="row">
                   <div class="col-md-6 col-12 sliceing-image">
-                    <img class="img-fluid" src="./assets/sliceing.png" alt="" />
+                    <img class="img-fluid" src="./assets/sliceing.png" alt="" loading="lazy"/>
                   </div>
                   <!-- Headings and Paragraphs -->
                   <div class="col-md-6 col-12">
                     <h5>OUR AMAZING SERVICES</h5>
                     <h3 class="font-si">Engage the families you serve</h3>
 
-                    <img class="small-image" src="./assets/bars.png" alt="Bars" />
+                    <img class="small-image" src="./assets/bars.png" alt="Bars" loading="lazy"/>
 
                     <h4 class="font">ELIMINATE HANDWRITTEN MEDICATION LISTS</h4>
                     <p class="font-small">
@@ -224,23 +228,23 @@
                   <div class="col-md-5 col-12">
                     <h4 class="stay-touch">STAY IN TOUCH</h4>
                     <h1>Contact us</h1>
-                    <img class="small-image" src="./assets/bars.png" alt="Bars" />
+                    <img class="small-image" src="./assets/bars.png" alt="Bars" loading="lazy"/>
                     <br />
                     <br />
                     <!-- Contact information -->
 
                     <div class="main">
                       <div class="contact-image">
-                        <img class="iamge-fluid" src="./assets/Phone.png" alt="" />
+                        <img class="iamge-fluid" src="./assets/Phone.png" alt="" loading="lazy"/>
                         1-541-754-3010
                       </div>
                       <div class="contact-image">
-                        <img class="image-fluid" src="./assets/Envelope.png" alt="" />
+                        <img class="image-fluid" src="./assets/Envelope.png" alt="" loading="lazy"/>
                         support@jointreaty.com
                       </div>
 
                       <div class="contact-image">
-                        <img class="image-fluid" src="./assets/Pointer.png" alt="" />
+                        <img class="image-fluid" src="./assets/Pointer.png" alt="" loading="lazy"/>
                         3782 Shady pines Drive USA
                       </div>
 
@@ -249,6 +253,7 @@
                           src="./assets/fb.png"
                           alt="Facebook"
                           style="width: 42px; height: 42px"
+                          loading="lazy"
                       /></a>
 
                       <a class="link-image" href="https://twitter.com/"
@@ -256,6 +261,7 @@
                           src="./assets/twitter.png"
                           alt="twitter"
                           style="width: 42px; height: 42px"
+                          loading="lazy"
                       /></a>
 
                       <a class="link-image" href="https://instagram.com/"
@@ -263,6 +269,7 @@
                           src="./assets/instagram.png"
                           alt="instagram"
                           style="width: 42px; height: 42px"
+                          loading="lazy"
                       /></a>
 
                       <a class="link-image" href="https://youtube.com/"
@@ -270,6 +277,7 @@
                           src="./assets/youtube.png"
                           alt="youtube"
                           style="width: 42px; height: 42px"
+                          loading="lazy"
                       /></a>
                     </div>
                   </div>
